# Rasterizer-G101

./: .gitignore  CMakeLists.txt  README.md  Shader.hpp  Texture.hpp  Triangle.hpp  main.cpp  rasterizer.cpp  rasterizer.hpp
